[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0", "wheel"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "generate_alchemical_lammps_inputs"
description = "Functions to generate LAMMPS inputs for alchemical calculations."
dynamic = ["version"]
readme = "README.md"

authors = [
    { name = "Jennifer A. Clark", email = "jennifer.clark@nist.gov" }
]

# See https://pypi.org/classifiers/
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
    "numpy",
    "importlib-resources;python_version<'3.10'",
    "sphinx > 2.1",
    "docutils >= 0.17",
    "myst_parser",
    "sphinx_copybutton",
    "pre-commit",
    "black",
    "nbsphinx"
]

# Update the urls once the hosting is set up.
[project.urls]
"GitHub Source" = "https://github.com/usnistgov/generate_alchemical_lammps_inputs/"
"Public Documentation" = "https://Docs4NIST.nist.gov/generate_alchemical_lammps_inputs/"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.setuptools]
# This subkey is a beta stage development and keys may change in the future, see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
#
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip-safe = false

include-package-data = false
license-files = ["LICENSES/*.md"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src/"]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
generate_alchemical_lammps_inputs = [
    "py.typed"
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.coverage.run]
source = ["src/"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "src/generate_alchemical_lammps_inputs/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
